--- a/Shelly Power Manager.csproj
+++ b/Shelly Power Manager.csproj
@@ -24,7 +24,10 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ProductName>Sheely Power Manager</ProductName>
+    <PublisherName>TSXToolKit</PublisherName>
+    <SuiteName>TSXToolKit</SuiteName>
+    <ApplicationRevision>6</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
